Fix 'Background and foreground colors do not have a sufficient contrast ratio' issue in CCF link in footer

--- a/src/components/shared/Footer.css
+++ b/src/components/shared/Footer.css
@@ -12,6 +12,14 @@ p.FooterColumnHeading {
   color: white;
 }
 
+a.CCFLink {
+  color: rgb(255,182,31);
+}
+
+a.CCFLink:hover {
+  color: rgb(255,149,0);
+}
+
 @media (max-width: 415px) {
   .FooterNav a {
     display: inline-block;
